--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1",
+    "shallowequal": "^1.1.0",
     "sweetalert2": "^7.29.0",
     "sweetalert2-react-content": "^1.0.1"
   },
